# rosterwizard

./: .gitignore  Cargo.toml  roster.json  roster2.json
src/: lib.rs  roster.rs
