[package]
name = "rosterwizard"
version = "0.0.0"
authors = ["nfk93 <nfk1993@gmail.com>"]
edition = "2018"

[lib]
name = "rosterwizard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coin_cbc = "0.1.5"
lp-modeler = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }